# contracts

creator-coin-factory/: Cargo.toml  build.sh  deploy.sh
creator-coin-factory/res/: creator_coin_factory.wasm
creator-coin-factory/src/: lib.rs
loozr-core/: Cargo.toml  build.sh
loozr-core/res/: loozr_core.wasm
loozr-core/src/: lib.rs
profile-token-contract/: Cargo.toml  build.sh  deploy.sh
profile-token-contract/res/: loozr_creator_token.wasm
profile-token-contract/src/: lib.rs
